--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lls",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.2",
+  "description": "show file info easily",
   "main": "index.js",
   "bin": {
     "lls": "index.js"
@@ -9,13 +9,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "ocowchun",
   "license": "MIT",
   "dependencies": {
     "bytes": "^2.1.0",
     "colors": "^1.1.2",
     "commander": "^2.8.1",
     "lodash": "^3.10.1",
+    "moment": "^2.10.6",
     "rx": "^3.1.1",
     "userid": "^0.1.3"
   }
